--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ canvas{
 }
 
 /* RESPONSIVE DESIGN */
-@media (min-width : 350px) and (max-width: 1000px) {
+/* @media (min-width : 350px) and (max-width: 1000px) {
   .main{
     top: 40%;
   }
@@ -76,4 +76,4 @@ canvas{
     width: 90%;
 
   } 
-}
+} */
